# USDPluginExamples

./: README.md
src/: CMakeLists.txt
src/arTri/: CMakeLists.txt  api.h  plugInfo.json  resolver.cpp  resolver.h
